[metadata]
name = rtl433_to_mqtt
version = attr:rtl433_to_mqtt.rtl433_to_mqtt.__version__
description = Convert information from `rtl_433` script (in JSON) to MQTT.
long_description = file:README.md
author = Jonathan Virga
author_email = jonathan.virga@gail.com

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    click==8.0.3
    paho-mqtt==1.5.1
    setuptools_scm==6.3.2

[options.entry_points]
console_scripts =
    rtl433_to_mqtt = rtl433_to_mqtt.rtl433_to_mqtt:main
